fixed padding for some block on tablets and mobiles

--- a/src/styles/blocks/_benefits.scss
+++ b/src/styles/blocks/_benefits.scss
@@ -3,7 +3,7 @@
     @include container;
 
     @include onTablet {
-      padding: 0 30px;
+      padding: 0 60px;
     }
 
     @include onMobile {
