--- a/src/styles/blocks/_features.scss
+++ b/src/styles/blocks/_features.scss
@@ -89,6 +89,7 @@
   &__buttons {
     display: none;
     @include onTablet {
+      margin-left: 10px;
       display: inline-block;
     }
 
@@ -98,7 +99,8 @@
     }
   }
 
-  &__btn-left, &__btn-right {
+  &__btn-left,
+  &__btn-right {
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -106,12 +108,11 @@
     padding: 0;
   }
 
-  &__btn-left-img, &__btn-right-img {
-    padding-left: 10px;
+  &__btn-left-img,
+  &__btn-right-img {
     color: $color-dark-charcoal;
     transition: transform $transition-duration,
-    color $transition-duration;
-    z-index: 990;
+      color $transition-duration;
 
     &:hover {
       color: $color-scobeloff;
