--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -6,7 +6,16 @@
 
     display: flex;
     flex-direction: column;
+
+    @include onTablet {
+      padding: 0 60px;
+    }
+
+    @include onMobile {
+      padding: 0;
+    }
   }
+
 
   &__top {
     display: flex;
@@ -56,8 +65,11 @@
     @include onTablet {
       padding-top: 0;
     }
+    @include onMobile {
+      padding: 0 30px
+    }
   }
-  
+
   &__title {
     @include desktopH1;
     margin-bottom: 30px;
