--- a/src/styles/blocks/_technology.scss
+++ b/src/styles/blocks/_technology.scss
@@ -5,10 +5,12 @@
 
     @include onTablet {
       margin-bottom: 140px;
+      padding: 0 60px;
     }
 
     @include onMobile {
       margin-bottom: 110px;
+      padding: 0 30px;
     }
   }
 
